fixed z-index issue with banner image and hide/reveal nav at desktop; added handling for resizing of window to deal with top positioning of mobile nav

--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ a {
   display: flex;
   height: 6rem;
   justify-content: center;
-  z-index: 1;
+  z-index: 2;
 }
 
 .header__home-button {
@@ -89,6 +89,7 @@ a {
   justify-content: center;
   position: fixed;
   right: -60%;
+  top: 0;
   transition: 850ms ease;
   width: 60%;
   z-index: 2
@@ -302,7 +303,7 @@ a {
     transition: top 0.3s;
     width: 100%;
     top: -2rem;
-    z-index: 0;
+    z-index: 1;
   }
   
   .nav.show {
@@ -347,6 +348,7 @@ a {
   .banner__img {
     /* height: 35rem; */
     margin-top: 0;
+    z-index: 0;
   }
 
   .card__img {
